--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             <p>No recipes found for your query. Please try again!</p>
           </div> -->
 
-        <!--
-        <figure class="recipe__fig">
+        <!--recipe container start -->
+         <!-- <figure class="recipe__fig">
           <img src="img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
@@ -251,8 +251,8 @@
               <use href="img/icons.svg#icon-arrow-right"></use>
             </svg>
           </a>
-        </div>
-        -->
+        </div> -->
+        <!-- recipe container end -->
       </div>
     </div>
 
