--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 
       <div class="search-results">
         <ul class="results">
+          <a href="#5ed6604591c37cdc054bcd09">recipe 1</a>
+          <a href="#5ed6604591c37cdc054bcb37">recipe 2</a>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -159,7 +161,7 @@
           </div> -->
 
         <!--recipe container start -->
-         <!-- <figure class="recipe__fig">
+        <!-- <figure class="recipe__fig">
           <img src="img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
