--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="css/main.css" />
-    <script defer src="js/controller.js"></script>
+    <script type ="module" defer src="js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
